--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 01</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h2>Let's begin</h2>
+    <header>
+        <nav>
+            <h2 class="logo">Bangladesh 2.0</h2>
+            <button class="outlinedBtn">Sign in</button>
+        </nav>
+    </header>
 </body>
 
 </html>
