--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
             <h2 class="logo">Bangladesh 2.0</h2>
             <button class="outlinedBtn">Sign in</button>
         </nav>
+        <div class="heroSection">
+            <div class="heroContent">
+                <p class="subTitle">Bangladesh 2.0</p>
+                <h2 class="heroTitle">Idea , innovation ,
+                    vision and challenges in New Bangladesh.</h2>
+                <button class="containedBtn">Explore New Bangladesh</button>
+            </div>
+            <div class="imgContainer">
+                <img src="assets/hero.png" alt="" height="400">
+            </div>
+        </div>
+
     </header>
+
 </body>
 
 </html>
