added pillers of Bangladesh2.0 section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <h2 class="logo">Bangladesh 2.0</h2>
             <button class="outlinedBtn">Sign in</button>
         </nav>
+    </header>
+
+    <main class="container">
         <div class="heroSection">
             <div class="heroContent">
                 <p class="subTitle">Bangladesh 2.0</p>
@@ -25,8 +28,32 @@
                 <img src="assets/hero.png" alt="" height="400">
             </div>
         </div>
-
-    </header>
+        <section id="pillersOfBd">
+            <h2 class="heading">Pillars of "Bangladesh 2.0"</h2>
+            <div class="pillerContainer">
+                <div>
+                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <h4 class="title">Innovation</h4>
+                    <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div>
+                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <h4 class="title">Sustainability</h4>
+                    <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div>
+                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <h4 class="title">Infrastructure</h4>
+                    <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div>
+                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <h4 class="title">Empowerment</h4>
+                    <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
