--- a/index.html
+++ b/index.html
@@ -53,6 +53,59 @@
                 </div>
             </div>
         </section>
+
+        <!-- vision near future  -->
+        <section id="Vision">
+            <div class="flexColumn gap-24 ">
+                <h2 class="heading">The Vision of Future</h2>
+                <p class="paragraph">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge
+                    technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable
+                    energy, digital transformation, and robust infrastructure, the country is set to become a global
+                    model of development.</p>
+            </div>
+            <div class="flex align-center gap-24">
+                <div class="flexColumn gap-24 padding-32 bg-softBlue  rounded-xl">
+                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <div class="flexColumn gap-12">
+                        <h4 class="title">Digital Transformation</h4>
+                        <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
+                            to services for all citizens.</p>
+                    </div>
+                    <button class="containedBtn">Learn more</button>
+                </div>
+                <div class="flexColumn gap-24 padding-32 bg-softGreen rounded-xl">
+                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <div class="flexColumn gap-12">
+                        <h4 class="title">Digital Transformation</h4>
+                        <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
+                            to services for all citizens.</p>
+                    </div>
+                    <button class="containedBtn">Learn more</button>
+                </div>
+                <div class="flexColumn gap-24 padding-32 bg-softWhite rounded-xl">
+                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <div class="flexColumn gap-12">
+                        <h4 class="title">Digital Transformation</h4>
+                        <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
+                            to services for all citizens.</p>
+                    </div>
+                    <button class="containedBtn">Learn more</button>
+                </div>
+            </div>
+            <div class="rounded-xl qouteOfYunus flexColumn gap-12 ">
+                <p class="paragraph relative">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas,
+                    ducimus
+                    labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem
+                    numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit
+                    error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse,
+                    cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam
+                    architecto soluta necessitatibus vero?"</p>
+                <div class="gap-4 flexColumn ">
+                    <h4 class="title" style="opacity: 0.8;">Dr. Muhammad Yunus</h4>
+                    <p class="paragraph">Chief Adviser of the People's Republic of Bangladesh</p>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
