skiped opinion section for now

--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
                 </div>
             </div>
         </section>
+
+        <!-- Your opinion section -->
+        <section id="opinion" class="w-full">
+
+            <h2 class="heading">Select Your Opinion</h2>
+
+            <div class="padding-32">
+
+            </div>
+        </section>
+
     </main>
 
 </body>
