--- a/index.html
+++ b/index.html
@@ -117,6 +117,95 @@
             </div>
         </section>
 
+        <!-- Recent News section -->
+        <section id="recent">
+            <div class="flexColumn gap-24">
+                <h2 class="heading">
+                    Recent News
+                </h2>
+                <p class="paragraph">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge
+                    technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable
+                    energy, digital transformation, and robust infrastructure, the country is set to become a global
+                    model of development.</p>
+            </div>
+            <!-- latest news -->
+            <div class="flexColumn gap-24">
+                <div class="flex gap-32 align-center padding-32 bg-white rounded-xl">
+                    <div>
+                        <img class="sateliteImg" src="assets/satelite.png" alt="" width="400">
+                    </div>
+                    <div class="flexColumn gap-32">
+                        <div class="flexColumn gap-12">
+                            <h3>Bangladesh Launches New Satellite</h3>
+                            <img class="newChannel" src="assets/al-jazeera.png" alt="" height="40">
+                            <div class="flex align-center gap-12">
+                                <p class="paragraph">Date: 05/01/2025</p>
+                                <p class="paragraph">Time: 10.25 PM</p>
+                            </div>
+                            <p class="paragraph">Not until the creation and maintenance of decent conditions of life for
+                                all
+                                people are recognized and accepted as a common obligation of all people and all
+                                countries—not
+                                until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        </div>
+                        <div>
+                            <button class="containedBtn">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flexRowReverse gap-32 align-center padding-32 bg-white rounded-xl">
+                    <div>
+                        <img class="sateliteImg" src="assets/satelite.png" alt="" width="400">
+                    </div>
+                    <div class="flexColumn gap-32">
+                        <div class="flexColumn gap-12">
+                            <h3>Bangladesh Launches New Satellite</h3>
+                            <img class="newChannel" src="assets/al-jazeera.png" alt="" height="40">
+                            <div class="flex align-center gap-12">
+                                <p class="paragraph">Date: 05/01/2025</p>
+                                <p class="paragraph">Time: 10.25 PM</p>
+                            </div>
+                            <p class="paragraph">Not until the creation and maintenance of decent conditions of life for
+                                all
+                                people are recognized and accepted as a common obligation of all people and all
+                                countries—not
+                                until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        </div>
+                        <div>
+                            <button class="containedBtn">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex gap-32 align-center padding-32 bg-white rounded-xl">
+                    <div>
+                        <img class="sateliteImg" src="assets/satelite.png" alt="" width="400">
+                    </div>
+                    <div class="flexColumn gap-32">
+                        <div class="flexColumn gap-12">
+                            <h3>Bangladesh Launches New Satellite</h3>
+                            <img class="newChannel" src="assets/al-jazeera.png" alt="" height="40">
+                            <div class="flex align-center gap-12">
+                                <p class="paragraph">Date: 05/01/2025</p>
+                                <p class="paragraph">Time: 10.25 PM</p>
+                            </div>
+                            <p class="paragraph">Not until the creation and maintenance of decent conditions of life for
+                                all
+                                people are recognized and accepted as a common obligation of all people and all
+                                countries—not
+                                until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        </div>
+                        <div>
+                            <button class="containedBtn">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
 </body>
