added donate section

--- a/index.html
+++ b/index.html
@@ -206,6 +206,27 @@
 
         </section>
 
+        <!-- Donate section -->
+        <section id="donate  ">
+            <div class="flexColumn gap-24 align-center text-center">
+                <h2 class="heading">Donate Today</h2>
+                <p class="paragraph">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge
+                    technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable
+                    energy, digital transformation, and robust infrastructure.</p>
+            </div>
+
+            <div class="flex gap-24">
+                <span class="donateMoney">100 Taka</span>
+                <span class="donateMoney bg-softGreen">200 Taka</span>
+                <span class="donateMoney">500 Taka</span>
+                <span class="donateMoney">1000 Taka</span>
+            </div>
+            <div class=" bg-white btnContainer flex align-center">
+                <button>Other Amount (Taka)</button>
+            </div>
+            <button class="containedBtn">Done Now</button>
+        </section>
+
     </main>
 
 </body>
