added the neslater section

--- a/index.html
+++ b/index.html
@@ -227,6 +227,24 @@
             <button class="containedBtn">Done Now</button>
         </section>
 
+        <!-- Newslater section -->
+        <section id="newslater" class="bg-softGreen w-full rounded-xl">
+            <div class="newslaterContainer flexColumn gap-24 text-center">
+                <div class="flexColumn gap-12 ">
+                    <h2 class="heading">Subscribe Newsletter</h2>
+                    <p class="paragraph">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                        cutting-edge
+                        technology, promoting inclusive growth.</p>
+                </div>
+                <div class="flex">
+                    <input class="inputField" type="text" placeholder="Enter your email here">
+                    <button class="containedBtn"
+                        style="border-radius: 0px 8px 8px 0px; font-size: 18px;">Subscribe</button>
+                </div>
+                <p class="paragraph">We promise not to spam you!</p>
+            </div>
+        </section>
+
     </main>
 
 </body>
