--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 01</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -246,6 +249,16 @@
         </section>
 
     </main>
+
+    <footer>
+        <h2>Bangladesh 2.0</h2>
+        <div style="border: 1px solid rgba(14, 14, 14, 0.1); width: 90%;"></div>
+        <div class="flex gap-24">
+            <i class="fa-brands fa-facebook" style="color: rgb(58, 58, 247);"></i>
+            <i class="fa-brands fa-instagram" style="color: rgb(235, 104, 126);"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+        </div>
+    </footer>
 
 </body>
 
