added hover effect on buttons

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
                             to services for all citizens.</p>
                     </div>
-                    <button class="containedBtn">Learn more</button>
+                    <button class="containedBtn" style="background-color:rgb(84, 144, 245);">Learn more</button>
                 </div>
                 <div class="flexColumn gap-24 padding-32 bg-softGreen rounded-xl">
                     <img src="assets/card-icon.png" alt="" height="62" width="62">
@@ -83,7 +83,7 @@
                         <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
                             to services for all citizens.</p>
                     </div>
-                    <button class="containedBtn">Learn more</button>
+                    <button class="containedBtn" style="background-color:rgb(9, 161, 92) ;">Learn more</button>
                 </div>
                 <div class="flexColumn gap-24 padding-32 bg-softWhite rounded-xl">
                     <img src="assets/card-icon.png" alt="" height="62" width="62">
@@ -92,7 +92,7 @@
                         <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
                             to services for all citizens.</p>
                     </div>
-                    <button class="containedBtn">Learn more</button>
+                    <button class="containedBtn" style="background-color: rgb(255, 194, 57);">Learn more</button>
                 </div>
             </div>
             <div class="rounded-xl qouteOfYunus flexColumn gap-12 ">
