added some hover effect on all over all pages and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <img src="assets/hero.png" alt="" height="400">
             </div>
         </div>
+        <!-- this is monsterM. writing the code  -->
         <section id="pillersOfBd">
             <h2 class="heading">Pillars of "Bangladesh 2.0"</h2>
             <div class="pillerContainer">
@@ -96,13 +97,16 @@
                 </div>
             </div>
             <div class="rounded-xl qouteOfYunus flexColumn gap-12 ">
-                <p class="paragraph relative">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas,
+                <p class="paragraph ">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas,
                     ducimus
                     labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem
                     numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit
                     error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse,
                     cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam
                     architecto soluta necessitatibus vero?"</p>
+                <div class="quoteContainer">
+                    <img src="assets/quote-bg.png" alt="" height="62" width="62">
+                </div>
                 <div class="gap-4 flexColumn ">
                     <h4 class="title" style="opacity: 0.8;">Dr. Muhammad Yunus</h4>
                     <p class="paragraph">Chief Adviser of the People's Republic of Bangladesh</p>
@@ -217,16 +221,16 @@
                     technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable
                     energy, digital transformation, and robust infrastructure.</p>
             </div>
-
             <div class="flex gap-24">
                 <span class="donateMoney">100 Taka</span>
                 <span class="donateMoney bg-softGreen">200 Taka</span>
                 <span class="donateMoney">500 Taka</span>
                 <span class="donateMoney">1000 Taka</span>
             </div>
-            <div class=" bg-white btnContainer flex align-center">
-                <button>Other Amount (Taka)</button>
-            </div>
+            <input class=" bg-white btnContainer flex align-center text-center" type="text"
+                placeholder="Other Amount (Taka)" />
+            <!-- <button>Other Amount (Taka)</button> -->
+
             <button class="containedBtn">Done Now</button>
         </section>
 
@@ -250,6 +254,7 @@
 
     </main>
 
+    <!-- footer section -->
     <footer>
         <h2>Bangladesh 2.0</h2>
         <div style="border: 1px solid rgba(14, 14, 14, 0.1); width: 90%;"></div>
