added oppinion section

--- a/index.html
+++ b/index.html
@@ -119,8 +119,46 @@
 
             <h2 class="heading">Select Your Opinion</h2>
 
-            <div class="padding-32">
+            <div class="padding-32 w-full bg-white rounded-xl">
+                <table>
+                    <thead>
+                        <tr class="tableHeader">
+                            <th style="text-align: start;">Questions</th>
+                            <th>Select Your Opinion</th>
+                        </tr>
 
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Do you believe Bangladesh is on the right path toward becoming a
+                                developed nation?</td>
+                            <td class="text-center">
+                                <select name="Opinion" id="">
+                                    <option value="yes i agree">Yes I agree</option>
+                                    <option value="no i don't">NO I Don't</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <td class="text-center">
+                                <select name="Opinion" id="">
+                                    <option value="yes i agree">Yes I agree</option>
+                                    <option value="no i don't">NO I Don't</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <td class="text-center">
+                                <select name="Opinion" id="">
+                                    <option value="yes i agree">Yes I agree</option>
+                                    <option value="no i don't">NO I Don't</option>
+                                </select>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
 
