added vision sections button hover effect with opacity

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
                             to services for all citizens.</p>
                     </div>
-                    <button class="containedBtn" style="background-color:rgb(84, 144, 245);">Learn more</button>
+                    <button class="visionBtn">Learn more</button>
                 </div>
                 <div class="flexColumn gap-24 padding-32 bg-softGreen rounded-xl">
                     <img src="assets/card-icon.png" alt="" height="62" width="62">
@@ -84,7 +84,7 @@
                         <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
                             to services for all citizens.</p>
                     </div>
-                    <button class="containedBtn" style="background-color:rgb(9, 161, 92) ;">Learn more</button>
+                    <button class="visionBtn1">Learn more</button>
                 </div>
                 <div class="flexColumn gap-24 padding-32 bg-softWhite rounded-xl">
                     <img src="assets/card-icon.png" alt="" height="62" width="62">
@@ -93,25 +93,24 @@
                         <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
                             to services for all citizens.</p>
                     </div>
-                    <button class="containedBtn" style="background-color: rgb(255, 194, 57);">Learn more</button>
+                    <button class="visionBtn2" ">Learn more</button>
                 </div>
             </div>
-            <div class="rounded-xl qouteOfYunus flexColumn gap-12 ">
-                <p class="paragraph ">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas,
-                    ducimus
-                    labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem
-                    numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit
-                    error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse,
-                    cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam
-                    architecto soluta necessitatibus vero?"</p>
-                <div class="quoteContainer">
-                    <img src="assets/quote-bg.png" alt="" height="62" width="62">
+            <div class=" rounded-xl qouteOfYunus flexColumn gap-12 ">
+                <p class=" paragraph ">" Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus
+                        labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis
+                        exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores
+                        ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est
+                        vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur,
+                        dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                        <div class="quoteContainer">
+                            <img src="assets/quote-bg.png" alt="" height="62" width="62">
+                        </div>
+                        <div class="gap-4 flexColumn ">
+                            <h4 class="title" style="opacity: 0.8;">Dr. Muhammad Yunus</h4>
+                            <p class="paragraph">Chief Adviser of the People's Republic of Bangladesh</p>
+                        </div>
                 </div>
-                <div class="gap-4 flexColumn ">
-                    <h4 class="title" style="opacity: 0.8;">Dr. Muhammad Yunus</h4>
-                    <p class="paragraph">Chief Adviser of the People's Republic of Bangladesh</p>
-                </div>
-            </div>
         </section>
 
         <!-- Your opinion section -->
