changes some news image and removed some of the dummy text

--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
                     <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
                 <div>
-                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <img src="assets/planet-7415581_1280.png" alt="" height="62" width="62">
                     <h4 class="title">Sustainability</h4>
                     <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
                 <div>
-                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <img src="assets/ai-generated-8810032_1280.jpg" alt="" height="62" width="62"
+                        style="border-radius: 50% ;">
                     <h4 class="title">Infrastructure</h4>
                     <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
@@ -78,18 +79,19 @@
                     <button class="visionBtn">Learn more</button>
                 </div>
                 <div class="flexColumn gap-24 padding-32 bg-softGreen rounded-xl">
-                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <img src="assets/wind-7595553_1280.png" alt="" height="62" width="62" style="border-radius: 50%;">
                     <div class="flexColumn gap-12">
-                        <h4 class="title">Digital Transformation</h4>
+                        <h4 class="title">Green Energy</h4>
                         <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
                             to services for all citizens.</p>
                     </div>
                     <button class="visionBtn1">Learn more</button>
                 </div>
                 <div class="flexColumn gap-24 padding-32 bg-softWhite rounded-xl">
-                    <img src="assets/card-icon.png" alt="" height="62" width="62">
+                    <img src="assets/ai-generated-8810032_1280.jpg" alt="" height="62" width="62"
+                        style="border-radius: 50%;">
                     <div class="flexColumn gap-12">
-                        <h4 class="title">Digital Transformation</h4>
+                        <h4 class="title">Modern Infrastructure</h4>
                         <p class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access
                             to services for all citizens.</p>
                     </div>
@@ -97,12 +99,13 @@
                 </div>
             </div>
             <div class=" rounded-xl qouteOfYunus flexColumn gap-12 ">
-                <p class=" paragraph ">" Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus
-                        labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis
-                        exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores
-                        ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est
-                        vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur,
-                        dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                <p class=" paragraph ">" The current financial crisis makes it very clears that the system that we have
+                        isn't really working, and this is the right time for us to undo things and build them in a new
+                        way. If you think creating a world without any poverty is impossible, let's do it. Because it is
+                        the right thing to do. We got rid of colonialism, we got rid of slavery, and we got rid of
+                        apartheid everyone thought each one of them was impossible. Let's take the next impossible, do
+                        it with joy and get it finished with and create a world free from poverty. Let us create the
+                        world of our choice."</p>
                         <div class="quoteContainer">
                             <img src="assets/quote-bg.png" alt="" height="62" width="62">
                         </div>
@@ -139,7 +142,8 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <td>Does Bangladesh celebrate its Victory Day on December 16th to commemorate the conclusion
+                                of the Liberation War in 1971?</td>
                             <td class="text-center">
                                 <select name="Opinion" id="">
                                     <option value="yes i agree">Yes I agree</option>
@@ -148,7 +152,8 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <td>Is it true that Bangladesh is one of the largest producers of jute in the world and was
+                                historically known for its "Golden Fiber"?</td>
                             <td class="text-center">
                                 <select name="Opinion" id="">
                                     <option value="yes i agree">Yes I agree</option>
@@ -176,22 +181,24 @@
             <div class="flexColumn gap-24">
                 <div class="flex gap-32 align-center padding-32 bg-white rounded-xl">
                     <div>
-                        <img class="sateliteImg" src="assets/satelite.png" alt="" width="400">
+                        <img class="sateliteImg" src="assets/news2.webp" alt="july mass Movement gatherings"
+                            width="400">
                     </div>
                     <div class="flexColumn gap-32">
                         <div class="flexColumn gap-12">
-                            <h3>Bangladesh Launches New Satellite</h3>
+                            <h3>July Mash Movement 2024</h3>
                             <img class="newChannel" src="assets/al-jazeera.png" alt="" height="40">
                             <div class="flex align-center gap-12">
                                 <p class="paragraph">Date: 05/01/2025</p>
                                 <p class="paragraph">Time: 10.25 PM</p>
                             </div>
-                            <p class="paragraph">Not until the creation and maintenance of decent conditions of life for
-                                all
-                                people are recognized and accepted as a common obligation of all people and all
-                                countries—not
-                                until then shall we,
-                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <p class="paragraph">Thousands of people have rallied in Bangladesh’s capital to demand the
+                                prosecution of ousted Prime Minister Sheikh Hasina and those responsible for hundreds of
+                                deaths in a mass uprising against her government in July.
+
+                                The Anti-Discrimination Student Movement organised what it called the March for Unity on
+                                Tuesday at the Central Shaheed Minar, a national monument in Dhaka. Protesters chanted
+                                slogans calling for Hasina’s trial and the banning of her Awami League party.</p>
                         </div>
                         <div>
                             <button class="containedBtn">Read More</button>
@@ -200,7 +207,7 @@
                 </div>
                 <div class="flex flexRowReverse gap-32 align-center padding-32 bg-white rounded-xl">
                     <div>
-                        <img class="sateliteImg" src="assets/satelite.png" alt="" width="400">
+                        <img class="sateliteImg" src="assets/satelite.png" alt="bangobondhu satelite1" width="400">
                     </div>
                     <div class="flexColumn gap-32">
                         <div class="flexColumn gap-12">
@@ -224,22 +231,25 @@
                 </div>
                 <div class="flex gap-32 align-center padding-32 bg-white rounded-xl">
                     <div>
-                        <img class="sateliteImg" src="assets/satelite.png" alt="" width="400">
+                        <img class="sateliteImg" src="assets/news3.webp" alt="" width="400">
                     </div>
                     <div class="flexColumn gap-32">
                         <div class="flexColumn gap-12">
-                            <h3>Bangladesh Launches New Satellite</h3>
-                            <img class="newChannel" src="assets/al-jazeera.png" alt="" height="40">
+                            <h3>Bangladesh to investigate 2009 paramilitary mutiny massacre</h3>
+                            <img class="newChannel" src="assets/al-jazeera.png"
+                                alt="In this February 25, 2009 file photo, Bangladesh army soldiers take positions near the headquarters of Bangladesh Rifles in Dhaka [File: Pavel Rahman/AP]"
+                                height="40">
                             <div class="flex align-center gap-12">
                                 <p class="paragraph">Date: 05/01/2025</p>
                                 <p class="paragraph">Time: 10.25 PM</p>
                             </div>
-                            <p class="paragraph">Not until the creation and maintenance of decent conditions of life for
-                                all
-                                people are recognized and accepted as a common obligation of all people and all
-                                countries—not
-                                until then shall we,
-                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <p class="paragraph">Bangladesh has ordered a commission to investigate a failed 2009
+                                paramilitary mutiny and subsequent crackdown, including the role of alleged “foreign”
+                                backers, the inquiry chief said.
+
+                                The mutineers stole thousands of weapons from the headquarters of the Bangladesh Rifles
+                                (BDR) paramilitary force before embarking on a killing spree in the barracks in February
+                                2009.</p>
                         </div>
                         <div>
                             <button class="containedBtn">Read More</button>
