fixed some bugs

--- a/index.html
+++ b/index.html
@@ -38,23 +38,27 @@
                 <div>
                     <img src="assets/card-icon.png" alt="" height="62" width="62">
                     <h4 class="title">Innovation</h4>
-                    <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="paragraph">Innovation is the driving force behind progress, unlocking new possibilities
+                    </p>
                 </div>
                 <div>
                     <img src="assets/planet-7415581_1280.png" alt="" height="62" width="62">
                     <h4 class="title">Sustainability</h4>
-                    <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="paragraph">Empowerment is the process of enabling individuals and communities to realize
+                    </p>
                 </div>
                 <div>
                     <img src="assets/ai-generated-8810032_1280.jpg" alt="" height="62" width="62"
                         style="border-radius: 50% ;">
                     <h4 class="title">Infrastructure</h4>
-                    <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="paragraph">Infrastructure forms the backbone of modern society, connecting people, places,
+                    </p>
                 </div>
                 <div>
                     <img src="assets/card-icon.png" alt="" height="62" width="62">
                     <h4 class="title">Empowerment</h4>
-                    <p class="paragraph">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="paragraph">Empowerment is the process of enabling individuals and communities to realize
+                    </p>
                 </div>
             </div>
         </section>
